--- a/_pages/404.md
+++ b/_pages/404.md
@@ -2,7 +2,7 @@
 title: "Page Not Found"
 layout: default
 sitemap: false
-permalink: /404.html
+permalink: https://www.cs.yale.edu/theory/404.html
 ---
 
 Sorry, but the page you were trying to view does not exist.
